tests/baselines/reference/inferPartialTypeArgumentsErrors1.errors.txt
tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx(2,53): error TS2322: Type '"x"' is not assignable to type '"z"'.
tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx(2,58): error TS2322: Type '"y"' is not assignable to type '"z"'.
tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx(7,41): error TS2344: Type '"z"' does not satisfy the constraint '"x" | "y"'.
tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx(8,69): error TS2322: Type '"z"' is not assignable to type '"x" | "y"'.
tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx(13,60): error TS2344: Type '"x" | "y"' does not satisfy the constraint '"x"'.
  Type '"y"' is not assignable to type '"x"'.
tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx(14,55): error TS2322: Type '"y"' is not assignable to type '"x"'.


==== tests/cases/conformance/types/typeParameters/inferPartialTypeArgumentsErrors1.tsx (6 errors) ====
    declare function testConstraints1<A extends B, B extends string>(arg?: { a?: A[], b?: B[] }): { a: A[], b: B[] }
    const expectError1 = testConstraints1<, "z"> ({ a: ["x", "y"] });
                                                        ~~~
!!! error TS2322: Type '"x"' is not assignable to type '"z"'.
                                                             ~~~
!!! error TS2322: Type '"y"' is not assignable to type '"z"'.
    
    declare function testConstraints2<A extends string, B extends A>(arg?: { a?: A[], b?: B[] }): { a: A[], b: B[] }
    const expectAllowed1 = testConstraints2<, "x"> ({ a: ["x", "y"] }); // OK { a: string[], b: "x"[] }
    const expectAllowed2 = testConstraints2<"x" | "y", > ({ b: ["x"] }); // OK { a: ("x" | "y")[], b: ("x" | "y")[] }
    const expectError2 = testConstraints2<, "z"> ({ a: ["x", "y"] }); // error - `A` infers as `"x" | "y"` which `"z"` does not satisfy
                                            ~~~
!!! error TS2344: Type '"z"' does not satisfy the constraint '"x" | "y"'.
    const expectError3 = testConstraints2<"x" | "y", > ({ b: ["x", "y", "z"] }); // error "z" not in "x" | "y"
                                                                        ~~~
!!! error TS2322: Type '"z"' is not assignable to type '"x" | "y"'.
    
    declare function complexConstraints<A extends string, B extends A, C extends B>(arg: { a?: A[], b?: B[], c?: C[] }): { a: A[], b: B[], c: C[] };
    const expectAllowed4 = complexConstraints<"x" | "y" | "z", , > ({ a: ["x"], c: ["x", "y"] }); // OK { a: ("x" | "y" | "z")[], b: ("x" | "y" | "z")[], c: ("x" | "y")[] }
    // Fails because B inferred to be "x" but that conflicts with C as "x" | "y"
    const expectError4 = complexConstraints<"x" | "y" | "z", , "x" | "y">({b: ["x"]});
                                                               ~~~~~~~~~
!!! error TS2344: Type '"x" | "y"' does not satisfy the constraint '"x"'.
!!! error TS2344:   Type '"y"' is not assignable to type '"x"'.
    const expectError5 = complexConstraints<"x", , >({c: ["y"]}); // error "y" does not extend "x"
                                                          ~~~
!!! error TS2322: Type '"y"' is not assignable to type '"x"'.